Fix grid margin on small widths on store page

--- a/assets/css/3-pages/_store.scss
+++ b/assets/css/3-pages/_store.scss
@@ -16,6 +16,9 @@ section#shop {
     position: relative;
     border-radius: 5px;
     transition: all 200ms ease-in-out;
+    &:nth-child(even) {
+      margin-bottom: 0;
+    }
     &:hover {
       text-decoration: none;
       transform: scale(1.05);
